New in SVN
----------

* Big refactoring of the code.
* Support for Python 2.4
* Fully reworked test suite, continuous integration site.
* Optionally use SWFtools for PDF images
* Fix Issue 231 (Smarter TTF autoembed)
* Fix Issue 232 (HTML tags in title metadata)
* Fix Issue 230 (Admonition titles were not translated)
* Fix Issue 228 (page labels and numbers match, so page ii is the
  same on-page and in the PDF TOC)
* Fix Issue 227 (missing background should not be fatal error)
* Fix Issue 225 (bad spacing in lineblocks)
* Fix Issue 223 (non-monospaced styles used in code)

New in 0.12.2
-------------

* Fix Issue 219 (incompatibility with reportlab 2.1)
* Added pdf_default_dpi option for pdfbuilder
* More style docs in the manual
* Better styling of lists
* Fix bug reported in comments in my blog where a stylesheet with 
  showHeader=True and no explicit header caused an exception.
* Fixed Issue 215: crashes in bookrest's background renderer.

New in 0.12.1
-------------

* Ship local patched copy of pypoppler-qt4
* Partial fix for Issue 205: KeyError: 'format'
* Fixed Issue 212: XML parsing error in bookrest
* Fixed Issue 210: pickle error in bookrest
* Switched --enable-splittables to True by default
* Fixed Issue 204: syntax error on font importing code

New in 0.12
-----------

* Fixed Issue 202: broken processing of HTML raw nodes
* New "options" section in stylesheets. New ["options"]["stylesheets"] subsection,
  which works similar to -s or to an include file: a list of stylesheets to be
  processed before the current one.   
* New --config option
* Fix for Issue 200 (position of frames was miscalculated)
* Fix For Issue 188 (uniconvertor "'unicode' object has no attribute 'readline'" error)
* New raw directive command: SetPageCounter. This enables
  page counter manipulation, and use of different styles,
  roman, lowerroman, alpha, loweralpha and arabic.
* New raw directive commands: EvenPageBreak and OddPageBreak